fixed the horizontal scrollbar

--- a/css/Style.css
+++ b/css/Style.css
@@ -39,3 +39,7 @@ font-size: 24px;
   font-size: 32px;
 
 }
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
